user can add bubbles

--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -79,7 +79,13 @@ body,
   height: 100%;
   width: 300px;
   box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
-
+  .icon {
+    font-size:1.5rem;
+  }
+  .icon:hover {
+    color:slategray;
+    cursor:pointer;
+  }
   ul {
     list-style: none;
     text-align: start;
